<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">


    <!-- Activity Titles -->
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_people">People</string>
    <string name="title_favorites">Favorites</string>
    <!-- Movie Tabs -->
    <string name="tab_popular">Popular</string>
    <string name="tab_now_playing">Now Playing</string>
    <string name="tab_upcoming">Upcoming</string>

    <!-- TV Show Tabs -->
    <string name="tab_airing_tonight">Airing Tonight</string>

    <!-- Favorite Tabs -->
    <string name="tab_movies">Movies</string>
    <string name="tab_tv_shows">TV Shows</string>
    <string name="tab_people">People</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_tv_shows">TV Shows</string>
    <string name="nav_people">People</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_subheader_profile">Profile</string>

    <string name="app_name">Moving Pictures</string>
    <string name="app_designer">Fourth Ward Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_sort">Sort By</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <string name="director">DIRECTOR:</string>
    <string name="cast">CAST:</string>
    <string name="writers">WRITERS:</string>
    <string name="cast_toolbar">Cast:</string>
    <string name="rated">RATED:</string>
    <string name="release_date">RELEASE DATE:</string>
    <string name="synopsis">SYNOPSIS:</string>
    <string name="genre">GENRE:</string>
    <string name="revenue">REVENUE:</string>
    <string name="created_by">CREATED BY:</string>
    <string name="networks">NETWORKS:</string>
    <string name="toast_bad_data">The Server is not returning correct data. Please try again.</string>
    <string name="toast_network_error">Could not fetch movie data. Please check network connection.</string>
    <string name="toast_unknown_error">Unknown Error. Pleast try again</string>
    <string name="progress_downloading_movies">Downloading Movies...</string>
    <string name="progress_downloading_details">Downloading Details...</string>
    <string name="progress_downloading_photos">Downloading Photos...</string>
    <string name="progress_loading">Loading</string>
    <string name="title_activity_actor_detail">Actor Details</string>
    <string name="title_activity_movie_reviews">Movie Reviews</string>
    <string name="user_reviews">User Reviews</string>
    <string name="author">AUTHOR:</string>
    <string name="born">BORN:</string>
    <string name="death">DEATH:</string>
    <string name="biography">BIOGRAPHY:</string>
    <string name="filmography">Filmography</string>
    <string name="photos">Photos</string>
    <string name="photos_toolbar">Photos:</string>
    <string name="no_reviews">NO Reviews</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="to_favorites">to favorites</string>
    <string name="from_favorites">from favorites</string>
    <string name="more">More</string>
    <string name="filmography_tab_movies">Movies</string>
    <string name="filmography_tab_tv">Televistion</string>
    <string name="menu_search">Search</string>
    <string name="videos">Videos</string>
    <string name="top_cast">Top Billed Cast</string>
    <string name="top_crew">Top Billed Crew</string>
    <string name="known_for">Known For</string>
    <string name="show_all_cast">SHOW ALL CAST</string>
    <string name="show_all_crew">SHOW ALL CREW</string>
    <string name="show_all_filmography">SHOW ALL FILMOGRAPHY</string>
    <string name="age">(age <xliff:g id="age">%s</xliff:g>)</string>

    <string name="version">Version: <xliff:g id="version">%s</xliff:g></string>


    <!-- Text attributes -->
    <string name="primary_text_alpha_dark">.87</string>
    <string name="secondary_text_alpha_dark">.54</string>

    <string name="title_activity_filmography">Filmography</string>
    <string name="title_activity_person_photos">Photos</string>
    <string name="title_activity_person_single_photo">Photo</string>
    <!-- Sort Order params -->
    <string name="sort_popularity">popularity.desc</string>
    <string name="sort_release_date">release_date.desc</string>
    <string name="sort_revenue">revenue.desc</string>
    <string name="title_activity_movie_cast">Cast</string>
    <string name="title_activity_tv_detail">TvDetailActivity</string>

    <!-- Actions -->
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">SORT</string>
    <string name="action_about">About</string>

    <!-- Accesability -->
    <string name="acc_movie_details_favorite_button">Favorites</string>
    <string name="acc_movie_rating">Rating: <xliff:g id="rating">%1$s</xliff:g>out of <xliff:g id="rating">%1$s</xliff:g></string>

    <!-- Transitions -->
    <string name="trans_poster">trans_poster</string>
    <!--
    <string name="trans_person_poster">trans_movie_poster</string>
    -->

    <!-- Search -->
    <string name="search_hint">Search Movies, TV, and People</string>
    <string name="search_results">Search Results</string>
    <string name="search_subtext_movie">Movie</string>
    <string name="search_subtext_tv_series">TV Series</string>

    <!-- Share -->
    <string name="share_link">Share link via</string>
    <string name="share_movie_subject">Check out Movie <xliff:g id="movie">%s</xliff:g></string>
    <string name="share_tv_subject">Check out TV Show <xliff:g id="tv">%s</xliff:g></string>
    <string name="share_person_subject">Check out <xliff:g id="person">%s</xliff:g></string>
    <string name="share_storage_directory" translatable="false">movingpictures</string>
    <string name="share_title">Share Photo</string>

    <!-- Empty List view strings -->
    <string name="empty_movies">No Saved Movies</string>
    <string name="empty_tv">No Saved TV Shows</string>
    <string name="empty_person">No Saved People</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="client_id">"1040027075689-i60h8ea53e5qb8rfg10bpg14s9m63hf2.apps.googleusercontent.com"</string>
    <string name="log_error_occurred">"Error occurred: "</string>

</resources>
