<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/detailCardStyle">

        <LinearLayout
            style="@style/detailLayoutSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/detail_overview_exp_text_view"
                layout="@layout/expandable_text_view" />

            <TextView
                android:id="@+id/genreTextView"
                style="@style/detailLightBackgroundTextView" />

            <TextView
                android:id="@+id/releaseDateTextView"
                style="@style/detailLightBackgroundTextView" />

            <TextView
                android:id="@+id/revenueTextView"
                style="@style/detailLightBackgroundTextView" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <include layout="@layout/video_list_layout"></include>

    <include layout="@layout/cast_list_layout"></include>

    <!-- CREW Layout -->
    <android.support.v7.widget.CardView
        android:id="@+id/crewLayout"
        style="@style/detailCardStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/headerLinkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/top_crew" />


                <TextView
                    android:id="@+id/detail_crew_director_textview"
                    style="@style/detailLightBackgroundTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/detail_crew_writer_textview"
                    style="@style/detailLightBackgroundTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/detail_crew_show_all_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/show_all_crew"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/detail_reviews_layout"
        style="@style/detailCardStyle">

        <FrameLayout
            style="@style/detailLayoutSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reviewsTextView"
                style="@style/headerLinkTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/user_reviews"
               />
        </FrameLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>